--- a/server-side/site/package.json
+++ b/server-side/site/package.json
@@ -3,17 +3,28 @@
   "description": "Survey Design Server",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "test": "mocha",
+    "start": "pm2 start process.json",
+    "stop": "pm2 stop process.json"
+  },
   "dependencies": {
     "archiver": "~0.4.6",
     "async": "^2.1.4",
     "cors": "^2.7.1",
     "emailjs": "^1.0.8",
     "express": "3.x",
+    "got": "^9.6.0",
     "jade": "^1.11.0",
     "json5": "^0.5.1",
     "marked": "0.3.9",
     "mongodb": "^2.2.22",
+    "pm2": "^3.3.1",
     "underscore": "^1.8.3",
     "validator": "^6.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.1"
   }
 }
